--- a/app/src/main/res/layout/activity_read_message.xml
+++ b/app/src/main/res/layout/activity_read_message.xml
@@ -1,9 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ReadMessage">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".Call"
+    android:background="@drawable/tel_g">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/relCo">
+        <TextView
+            android:id="@+id/tvReadMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textViewShowPhone"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="100dp"
+            android:adjustViewBounds="false"
+            android:textColor="@color/white"
+            /><Button
+            android:id="@+id/buttonHelp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="26dp"
+            android:background="@drawable/custom_button"
+            android:fontFamily="sans-serif"
+            android:layout_centerHorizontal="true"
+            android:padding="10dp"
+            android:text="@string/buttonhelp"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textView7datephone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/tvReadMessage"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="34dp"
+            android:text="Read Message"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
+</RelativeLayout>
