--- a/app/src/main/res/layout/activity_voice__commands.xml
+++ b/app/src/main/res/layout/activity_voice__commands.xml
@@ -4,10 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Voice_Commands">
-
-
-    <TextView
+    tools:context=".Voice_Commands"<TextView
         android:id="@+id/textViewShow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,8 +15,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/darktext"
         android:textSize="20dp" />
-
-    <ImageButton
+<ImageButton
         android:id="@+id/imageButtonSpeak"
         android:layout_width="150sp"
         android:layout_height="150sp"
