--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -2,69 +2,68 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/callHelp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Call"
-    android:background="@drawable/tel_g">
-
+    android:background="@drawable/tel_g"
+    tools:context=".Call">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/relCo">
-    <TextView
-        android:id="@+id/textViewShowPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/white"
-        android:textSize="20dp" />
 
-    <ImageButton
-        android:id="@+id/imageButtonSpeakPhone"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_below="@+id/textViewShowPhone"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="100dp"
-        android:adjustViewBounds="false"
-        android:background="@color/white"
-        android:backgroundTint="#00ffffff"
-        android:cropToPadding="false"
-        android:scaleType="centerCrop"
-        android:src="@drawable/mic" />
+        <TextView
+            android:id="@+id/textViewShowPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="70dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/white"
+            android:textSize="20dp" />
+
+        <ImageButton
+            android:id="@+id/imageButtonSpeakPhone"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_below="@+id/textViewShowPhone"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="100dp"
+            android:adjustViewBounds="false"
+            android:background="@color/white"
+            android:backgroundTint="#00ffffff"
+            android:cropToPadding="false"
+            android:scaleType="centerCrop"
+            android:src="@drawable/mic" />
 
         <Button
             android:id="@+id/buttonHelp"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-
             android:layout_alignParentBottom="true"
-
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="26dp"
             android:background="@drawable/custom_button"
             android:fontFamily="sans-serif"
-            android:layout_centerHorizontal="true"
             android:padding="10dp"
             android:text="@string/buttonhelp"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textViewtaptoPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageButtonSpeakPhone"
-        android:layout_centerHorizontal="true"
-        android:text="@string/tap_on_mic"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/textViewtaptoPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageButtonSpeakPhone"
+            android:layout_centerHorizontal="true"
+            android:text="@string/tap_on_mic"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/textView7datephone"
@@ -73,13 +72,9 @@
             android:layout_above="@+id/imageButtonSpeakPhone"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="34dp"
-            android:text="Call"
+            android:text="Make a Call"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-
-
-</RelativeLayout>
+            android:textSize="25sp" />
+    </RelativeLayout>
 </RelativeLayout>
