--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@color/custom">
+    android:background="@color/custom"
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageViewLogo"
@@ -27,6 +27,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#ffff"
         android:textStyle="bold" />
+
     <TextView
         android:id="@+id/textViewVoiceass"
         android:layout_width="wrap_content"
@@ -38,45 +39,50 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#ffff"
         android:textSize="15sp" />
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="30sp"
         android:layout_height="30sp"
         android:layout_below="@+id/textViewWelcome"
-        android:layout_marginEnd="13dp"
         android:layout_marginTop="41dp"
-        android:layout_toStartOf="@+id/textViewWelcome"
-        android:src="@drawable/ic_call_white_36dp"
+        android:layout_marginEnd="13dp"
         android:layout_marginRight="13dp"
-        android:layout_toLeftOf="@+id/textViewWelcome" />
+        android:layout_toStartOf="@+id/textViewWelcome"
+        android:layout_toLeftOf="@+id/textViewWelcome"
+        android:src="@drawable/ic_call_white_36dp" />
+
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/textViewWelcome"
+        android:layout_alignLeft="@+id/textViewWelcome"
         android:layout_alignTop="@+id/imageView6"
-        android:src="@drawable/ic_cloud_white_36dp"
-        android:layout_alignLeft="@+id/textViewWelcome" />
+        android:src="@drawable/ic_cloud_white_36dp" />
+
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/imageView5"
+        android:layout_alignLeft="@+id/imageView5"
         android:layout_alignTop="@+id/imageView2"
         android:layout_marginStart="12dp"
-        android:src="@drawable/ic_date_range_white_36dp"
-        android:layout_alignLeft="@+id/imageView5"
-        android:layout_marginLeft="12dp" />
+        android:layout_marginLeft="12dp"
+        android:src="@drawable/ic_date_range_white_36dp" />
+
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/imageViewLogo"
         android:layout_below="@+id/imageView3"
-        android:layout_marginEnd="8dp"
-        android:src="@drawable/ic_email_white_36dp"
+        android:layout_alignEnd="@+id/imageViewLogo"
         android:layout_alignRight="@+id/imageViewLogo"
-        android:layout_marginRight="8dp" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:src="@drawable/ic_email_white_36dp" />
+
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="wrap_content"
@@ -84,8 +90,8 @@
         android:layout_below="@+id/imageView2"
         android:layout_marginTop="27dp"
         android:layout_toStartOf="@+id/imageView2"
-        android:src="@drawable/ic_location_on_white_36dp"
-        android:layout_toLeftOf="@+id/imageView2" />
+        android:layout_toLeftOf="@+id/imageView2"
+        android:src="@drawable/ic_location_on_white_36dp" />
 </RelativeLayout>
 
 
