--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -2,16 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rlsend"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/msgb"
     tools:context=".SendMessage">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-      >
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/textViewShowPhone"
@@ -37,15 +36,16 @@
             android:cropToPadding="false"
             android:scaleType="centerCrop"
             android:src="@drawable/mic" />
+
         <Button
             android:id="@+id/buttonHelp"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="26dp"
             android:background="@drawable/custom_button"
             android:fontFamily="sans-serif"
-            android:layout_centerHorizontal="true"
             android:padding="10dp"
             android:text="@string/buttonhelp"
             android:textColor="@color/white"
@@ -57,13 +57,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageButtonSpeakMessage"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:text="@string/tap_on_mic"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:layout_centerHorizontal="true"/>
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView7datephone"
@@ -75,7 +75,7 @@
             android:text="Send SMS"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/colorPrimary"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
     </RelativeLayout>
 
