--- a/app/src/main/res/layout/activity_voice__commands.xml
+++ b/app/src/main/res/layout/activity_voice__commands.xml
@@ -2,9 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/voicecmd"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Voice_Commands"<TextView
+    tools:context=".Voice_Commands"
+    >
+
+    <TextView
         android:id="@+id/textViewShow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,7 +19,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/darktext"
         android:textSize="20dp" />
-<ImageButton
+
+    <ImageButton
         android:id="@+id/imageButtonSpeak"
         android:layout_width="150sp"
         android:layout_height="150sp"
@@ -27,17 +32,15 @@
         android:scaleType="centerCrop"
         android:src="@drawable/mic" />
 
-
-
     <Button
         android:id="@+id/buttonHelp"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="26dp"
         android:background="@drawable/custom_button"
         android:fontFamily="sans-serif"
-        android:layout_centerHorizontal="true"
         android:padding="10dp"
         android:text="@string/buttonhelp"
         android:textColor="@color/white"
@@ -59,8 +62,8 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:cropToPadding="false"
         android:scaleType="centerCrop" />
@@ -76,5 +79,4 @@
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/darktext" />
-
 </RelativeLayout>
